@@ -3,6 +3,12 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "cvstag.h" for version identification.
 
+2009-02-15	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-82-97:
+	  prsim, chpsim: command-line tab-completion (readline only)
+
+
 2009-02-10	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-82-96-merged-prsim-13-03:
